compose: Fix alignment of `.compose-control-buttons-container`.
This commit fixes the alignment of .compose-control-buttons-container
on mobile devices (width < sm_min).

--- a/web/styles/compose.css
+++ b/web/styles/compose.css
@@ -872,6 +872,12 @@ input.recipient_box {
     }
 }
 
+@media (width < $sm_min) {
+    .compose-control-buttons-container {
+        margin-bottom: 1.5px;
+    }
+}
+
 @media (width < $mm_min) {
     #compose-content {
         margin-right: 5px;
